# Bird-Detector

./: .gitignore  Dataset.py  IOU.py  Loss.py  Test.py  Train.py  YOLO.py  YOLOv1.py  YOLOv8.py  cub200_to_yolo.py  get_dataset.py  pyproject.toml
Archive/: Dataset.py  Test.py  Train.py
cub200_yolo/: cub200.yaml
